More-Vectors
- correct ClassNotFoundException in JMH test
- add JMH benchmark to compare scalar FastDecimal performance to
  VectorFastDecimal